--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.7",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0-alpha3",
     "bulma": "^0.9.4",
+    "moment": "^2.29.4",
     "pinia": "^2.0.32",
     "v-calendar": "^3.0.3",
     "vue": "^3.2.47",
+    "vue-axios": "^3.5.2",
     "vue-good-table-next": "^0.2.1",
     "vue-router": "^4.1.6"
   },
